@@ -582,7 +582,7 @@ function debug_wizard() {
 	if (cacti_sizeof($checks)) {
 		foreach ($checks as $check) {
 			if (isset($check['info']) && $check['info'] != '') {
-				$info = unserialize($check['info']);
+				$info = unserialize($check['info'], array('allowed_classes' => false));
 			} else {
 				$info = '';
 			}
@@ -672,7 +672,7 @@ function debug_view() {
 	$check_exists = cacti_sizeof($check);
 
 	if (isset($check) && is_array($check)) {
-		$check['info'] = unserialize($check['info']);
+		$check['info'] = unserialize($check['info'], array('allowed_classes' => false));
 	}
 
 	$dtd = db_fetch_row_prepared('SELECT *
