@@ -53,7 +53,11 @@ Cacti CHANGELOG
 -issue#5232: On large systems statistics gathering at the beginning of a poller run lead to excessive polling times
 -issue#5236: Edit Graph Template link missing base_url
 -issue#5238: Searching for Poller Items Generates SQL Errors
+-issue#5239: SNMP-Options - Bulk Walk Maximum Repetitions ignored
+-issue#5241: "Balance Process Load" dont work after upgrade to 1.2.23
 -issue#5243: Template Export missing Graph Template columns multiple and test_source
+-issue#5245: Add additional security to Cacti's use of the the unserialize function
+-issue#5247: Rebuilding Poller Cache from Utilities does not respect poller interval due to lack or ordering
 
 1.2.23
 -security#4920: Add .htaccess file to scripts folder
